setup done, now onto animations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                     <li><a href="#link">Links</a></li>
 
-                    <li><a href="#">Log-in</a></li>
+                    <li><a href="#additionallink">Log-in</a></li>
                 </ul>
             </nav>
 
@@ -212,10 +212,56 @@
                 <h2>Se nogle af vores andre GoTo destinationer</h2>
             </div>
 
+            <div id="linkimgcollection">
+
+                <figure>
+                    <img src="assets/gfx/london.jpg" alt="London">
+                    <figcaption>Lonodon</figcaption>
+                </figure>
+
+
+                <figure>
+                    <img src="assets/gfx/newyork.jpg" alt="London">
+                    <figcaption>New York</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="assets/gfx/tokyo.jpg" alt="London">
+                    <figcaption>Tokyo</figcaption>
+                </figure>
+            </div>
+
         </section>
 
 
-        <footer></footer>
+        <footer>
+
+                <section id="additionallink">
+                    <ul>
+                        <li><a href="#">Om Os</a></li>
+                        <li><a href="#">Kontakt</a></li>
+                        <li><a href="#">Log-in</a></li>
+                        <li><a href="#">Handelsbetingelser</a></li>
+                    </ul>
+
+                    <figure>
+                        <img src="assets/gfx/social.png" alt="social icons">
+                        
+                    </figure>
+
+                </section>
+
+                <section id="form">
+                    <h2>Nyhedsbrev</h2>
+                    <form action="#">
+                        <input type="text" placeholder="Navn:">
+                        <input type="text" placeholder="Email:">
+
+                        <button>Bestil</button>
+                    </form>
+                </section>
+
+        </footer>
 
     </div>
 </body>
