gotoparis endeligt resultat

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="assets/gfx/logo.png" />
     <title>GotoParis</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -20,36 +20,39 @@
             <div id="whiteblur"></div>
 
 
-            <a href="#" id="logolink">
+            <a href="index.html" id="logolink">
                 <img src="assets/gfx/logo.png" alt="gotoparis logo">
             </a>
 
             <nav>
                 <ul>
-                    <li><a href="#info">Info</a></li>
+                    <li><a href="#info">INFO</a></li>
 
-                    <li><a href="#design">Bestil</a></li>
+                    <li><a href="#">BESTIL</a></li>
 
-                    <li><a href="#pakkerejser">Pakkerejser</a></li>
+                    <li><a href="#pakkerejser">PAKKEREJSER</a></li>
 
-                    <li><a href="#link">Links</a></li>
+                    <li><a href="#link">LINKS</a></li>
 
-                    <li><a href="#additionallink">Log-in</a></li>
+                    <li><a href="#additionallink">BUNDEN</a></li>
                 </ul>
             </nav>
 
         </header>
 
         <section id="landing">
-            <img src="assets/gfx/landing.jpg" alt="tirumf buen">
+
             <div id="hgradiant"></div>
-            <h1>GotoParis</h1>
+
+            <h2>velkommen til</h2>
+            <h1>GotoParis<span> - Kultur rejser i Paris  </span></h1>
+            
         </section>
 
         <section id="info">
 
-            <img src="assets/gfx/info.jpg" alt="infofashion">
 
+            <img src="assets/gfx/info.jpg" alt="">
 
             <div id="infobox">,
                 <p>
@@ -58,7 +61,7 @@
 
                     <span>Din primære rejsepartner til kultur rejser i Paris.</span>
 
-                    <span>Vi tilbyder mange Spændened måder at rejse på.</span>
+                    <span>Vi tilbyder mange Spændened rejser med kultur i fokus.</span>
 
                     <span>Du kan Selv sammensætte din egen kultur rejse. </span>
 
@@ -72,7 +75,7 @@
                 <p>Design din egen kultur rejse.</p>
             </div>
             <div id="chosehotel">
-                <p>Vores udvalgte hoteller</p>
+                <p>Vores udvalgte hoteller <a href="">Se flere</a> </p>
             </div>
 
             <div id="selecthotel">
@@ -80,8 +83,8 @@
                     <img src="assets/gfx/hotelone.jpg" alt="">
 
                     <p><span>Paris Homes</span>
-                        pris for en weekend: 1697 kr. pr person
-                        <span class="italic">se mere</span></p>
+                        et varmt sted i udkanten af Paris.
+                        <span class="italic"><a href="#">se mere</a></span></p>
 
                     <form action="#">
                         <button>Bestil</button>
@@ -92,8 +95,8 @@
                 <div id="hoteltwo">
                     <img src="assets/gfx/hoteltwo.jpg" alt="">
                     <p><span>The Old Paris Fire</span>
-                        pris for en weekend: 3207 kr. pr person
-                        <span class="italic">se mere</span></p>
+                        et ekslusivt hotel nær Paris centrum
+                        <span class="italic"><a href="#">se mere</a></span></p>
 
                     <form action="#">
                         <button>Bestil</button>
@@ -102,8 +105,8 @@
                 <div id="hotelthree">
                     <img src="assets/gfx/hotelthree.jpg" alt="">
                     <p><span>The Paris Heart</span>
-                        pris for en weekend: 4925 kr. pr person
-                        <span class="italic">se mere</span></p>
+                        i hjertet af Paris, med kort adgang til alt.
+                        <span class="italic"><a href="#">se mere</a></span></p>
 
                     <form action="#">
                         <button>Bestil</button>
@@ -112,7 +115,7 @@
             </div>
 
             <div id="eventbanner">
-                <p> Vores udvalgte Events</p>
+                <p> Vores udvalgte Events  <a href="">Se flere</a></p>
             </div>
 
             <div id="choseevent">
@@ -121,7 +124,7 @@
                     <img src="assets/gfx/fashionevent.jpg" alt="">
                     <p><span>Mode i Paris:</span>
                         Oplec moden i Paris
-                        <span class="italic">se mere</span></p>
+                        <span class="italic"><a href="#">se mere</a></span></p>
 
                     <form action="#">
                         <button>Bestil</button>
@@ -132,7 +135,7 @@
                     <img src="assets/gfx/museumevent.jpg" alt="">
                     <p><span>Museum i Paris:</span>
                         besøg de mange museums i Paris
-                        <span class="italic">se mere</span></p>
+                        <span class="italic"><a href="#">se mere</a></span></p>
 
                     <form action="#">
                         <button>Bestil</button>
@@ -145,7 +148,7 @@
 
                     <p><span>Highlight Paris</span>
                         Se de store momenter i GotoParis
-                        <span class="italic">se mere</span></p>
+                        <span class="italic"><a href="#">se mere</a></span></p>
 
                     <form action="#">
                         <button>Bestil</button>
@@ -159,8 +162,10 @@
 
         <section id="pakkerejser">
 
+
             <div id="pakkerejserinfo">
-                <h2>Prøv en af vores kulturelle Pakkerejser</h2>
+                <h2>Prøv en af vores kulturelle Pakkerejser.    <a href="">Se flere</a>  </h2>
+                <h3> hvor fly, hotel, og events er med i prisen</h3>
             </div>
 
             <div id="completechoises">
@@ -172,7 +177,7 @@
 
                         <p><span>Paris's museums</span>
                             besøg de mange mueums i paris.
-                            <span class="italic">se mere</span></p>
+                            <span class="italic"><a href="#">se mere</a></span></p>
 
                         <form action="#">
                             <button>Bestil</button>
@@ -185,7 +190,7 @@
 
                         <p><span>Paris's monumenter</span>
                             se de store og berømter monumenter i byen
-                            <span class="italic">se mere</span></p>
+                            <span class="italic"><a href="#">se mere</a></span></p>
 
                         <form action="#">
                             <button>Bestil</button>
@@ -195,7 +200,7 @@
                         <img src="assets/gfx/completeFashion.jpg" alt="">
                         <p><span>Fransk mode</span>
                             se og oplev den franske mode, helt tæt på
-                            <span class="italic">se mere</span></p>
+                            <span class="italic"><a href="#">se mere</a></span></p>
 
                         <form action="#">
                             <button>Bestil</button>
@@ -209,7 +214,7 @@
 
         <section id="link">
             <div id="linkheader">
-                <h2>Se nogle af vores andre GoTo destinationer</h2>
+                <h2>Andre GoTo destinationer</h2>
             </div>
 
             <div id="linkimgcollection">
@@ -236,30 +241,30 @@
 
         <footer>
 
-                <section id="additionallink">
-                    <ul>
-                        <li><a href="#">Om Os</a></li>
-                        <li><a href="#">Kontakt</a></li>
-                        <li><a href="#">Log-in</a></li>
-                        <li><a href="#">Handelsbetingelser</a></li>
-                    </ul>
+            <section id="additionallink">
+                <ul>
+                    <li><a href="#">OM OS</a></li>
+                    <li><a href="#">KONTAKT</a></li>
+                    <li><a href="#">LOGIN</a></li>
+                    <li><a href="#">HANDELSEBESTINGELSER</a></li>
+                </ul>
 
-                    <figure>
-                        <img src="assets/gfx/social.png" alt="social icons">
-                        
-                    </figure>
+                <figure>
+                    <img src="assets/gfx/social.png" alt="social icons">
 
-                </section>
+                </figure>
 
-                <section id="form">
-                    <h2>Nyhedsbrev</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Navn:">
-                        <input type="text" placeholder="Email:">
+            </section>
 
-                        <button>Bestil</button>
-                    </form>
-                </section>
+            <section id="form">
+                <h2>Nyhedsbrev</h2>
+                <form action="#">
+                    <input type="text" placeholder="Navn:">
+                    <input type="text" placeholder="Email:">
+
+                    <button>Bestil</button>
+                </form>
+            </section>
 
         </footer>
 
